--- a/Laboratory Activities/Laboratory Activity 1 {September 5, 2004}/html-tables.html
+++ b/Laboratory Activities/Laboratory Activity 1 {September 5, 2004}/html-tables.html
@@ -6,7 +6,7 @@
     <title>Class Schedule</title>
 </head>
 <body style="background-color: #9cdcf4; color: #292929; font-family: Impact, sans-serif; margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh;">
-    <table style="width: 50%; border-spacing: 10px; border: 2px solid #f5b7d0; border-radius: 15px; margin: auto; background-color: #ffffff;">
+    <table style="width: 65%; border-spacing: 10px; border: 2px solid #f5b7d0; border-radius: 15px; margin: auto; background-color: #ffffff;">
         <tr>
             <th colspan="6" style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px; background-color: #f5b7d0; color: #292929; font-family: Baskerville, serif;">Class Schedule <br> CS 3102</th>
         </tr>
@@ -93,5 +93,51 @@
             <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">3:30 PM - 4:00 PM</td>
         </tr>
     </table>
+    <table style="width: 20%; border-spacing: 10px; border: 2px solid #f5b7d0; border-radius: 15px; margin: auto; background-color: #ffffff; margin-top: 20px;">
+        <tr>
+            <th colspan="3" style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px; background-color: #f5b7d0; color: #292929; font-family: Baskerville, serif;">Class Information</th>
+        </tr>
+        <tr>
+            <th style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px; background-color: #f5b7d0; color: #292929; font-family: Baskerville, serif;">Class Code</th>
+            <th style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px; background-color: #f5b7d0; color: #292929; font-family: Baskerville, serif;">Subject</th>
+            <th style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px; background-color: #f5b7d0; color: #292929; font-family: Baskerville, serif;">Instructor</th>
+        </tr>
+        <tr>
+            <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">IT 331</td>
+            <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">Application Development and Emerging Technologies</td>
+            <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">MONTALBO, FRANCIS JESMAR P.</td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">IT 321</td>
+            <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">Human-Computer Interaction</td>
+            <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">PALAD, LANIE P.</td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">CS 311</td>
+            <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">Automata Theory and Formal Languages</td>
+            <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">COMIA, LYSA V.</td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">CS 312</td>
+            <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">Mobile Computing</td>
+            <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">DE CHAVEZ, POUL ISAAC C.</td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">IT 314</td>
+            <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">Web Systems and Technologies</td>
+            <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">AGDON, FATIMA MARIE P.</td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">GEd 104</td>
+            <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">The Contemporary World</td>
+            <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">MADLANGBAYAN, JAZEL B.</td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">MATH 408</td>
+            <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">Data Analysis</td>
+            <td style="border: 1px solid #f5b7d0; text-align: center; padding: 10px; border-radius: 10px;">PEÑERO, ISRAEL P.</td>
+        </tr>
+    </table>
+    
 </body>
 </html>
