Submit lab act 4

--- a/Laboratory Activities/Laboratory Activity 4 {November 28, 2024}}/index.html
+++ b/Laboratory Activities/Laboratory Activity 4 {November 28, 2024}}/index.html
@@ -15,20 +15,20 @@
             <h1>Mico Raphael Cuarto</h1>
             <div class="social-links">
                 <a href="https://www.facebook.com/ocimico123/" target="_blank">
-                    <img src="facebook.png" alt="Facebook">
+                    <img src="assets/facebook.png" alt="Facebook">
                 </a>
                 <a href="https://www.instagram.com/mico_raphael/" target="_blank">
-                    <img src="instagram.png" alt="Instagram">
+                    <img src="assets/instagram.png" alt="Instagram">
                 </a>
                 <a href="mailto:22-01122@g.batstate-u.edu.ph" target="_blank">
-                    <img src="email.png" alt="Email">
+                    <img src="assets/email.png" alt="Email">
                 </a>
             </div>
         </div>
 
         <!-- Intro Card -->
         <div class="box intro-card">
-            <img src="hello.gif">
+            <img src="assets/hello.gif">
             <a href="https://github.com/oocim" class="btn" target="_blank">View My GitHub</a>
         </div>
 
@@ -39,9 +39,9 @@
             <p>Batangas State University</p>
             <h3>Hobbies</h3>
             <ul>
-                <li><img src="gaming.png" alt="Gaming Icon"> Gaming</li>
-                <li><img src="programming.png" alt="Programming Icon"> Programming</li>
-                <li><img src="gym.png" alt="Gym Icon"> Working Out</li>
+                <li><img src="assets/gaming.png" alt="Gaming Icon"> Gaming</li>
+                <li><img src="assets/programming.png" alt="Programming Icon"> Programming</li>
+                <li><img src="assets/gym.png" alt="Gym Icon"> Working Out</li>
             </ul>
         </div>
     </div>
